# frankenstein

./: .clang-format  .gitignore  CMakeLists.txt  components.h  main.c  main.cpp  systems.h  vector.h
core/: CMakeLists.txt  hash_map.c  hash_map.cpp  hash_map.h  utils.c  utils.h  vector.c  vector.cpp  vector.h
ecs/: CMakeLists.txt  components.c  components.cpp  components.h  consts.h  entity.c  entity.h  systems.c  systems.cpp  systems.h
engine/: CMakeLists.txt  consts.h  engine.c  engine.cpp  engine.h
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  utils.cpp  utils.h
src/dependencies/: CMakeLists.txt
src/ecs/: components.h  systems.cpp  systems.h
src/engine/: CMakeLists.txt  consts.h  engine.cpp  engine.h
src/engine/core/: CMakeLists.txt  utils.cpp  utils.h
src/engine/ecs/: CMakeLists.txt  components.cpp  components.h  entity.h  systems.cpp  systems.h
tests/: CMakeLists.txt  test_engine.cpp  test_entity.cpp  test_systems.cpp
tests/dependencies/: CMakeLists.txt
